feat: comprehensive docs upgrade with Kimi K2 showcase and SEO optimization
Major documentation enhancements:

🚀 **Kimi K2 Integration Showcase**
- Create dedicated Kimi K2 page highlighting Claude Code integration
- Feature ultra-fast inference and competitive pricing ($0.20/1M tokens)
- Add comprehensive setup guides for Groq and OpenRouter
- Include real-world use cases and community testimonials

🎨 **Visual and UX Improvements**
- Update homepage with new icon and lime green glow effect
- Add social sharing buttons (Twitter, LinkedIn, Reddit, copy link)
- Implement showcase grid with hover effects
- Enhanced typography and spacing throughout

🔍 **SEO Optimization**
- Add comprehensive meta tags for all pages
- Optimize titles and descriptions for provider-specific keywords
- Target search terms: "[Provider] Claude Code", "AI proxy [Provider]"
- Enhanced keyword density for Kimi K2, Groq, OpenAI, Gemini, etc.

🛠 **Technical Enhancements**
- Install and configure VitePress local search
- Add favicon support with multiple sizes and formats
- Implement bright lime green accent theme (dark mode: electric blue)
- Enhanced navigation with Kimi K2 featured sections

📱 **Social Media Integration**
- Custom sharing messages for each provider page
- Platform-specific content optimization
- Copy-to-clipboard functionality with visual feedback

🗂️ **Navigation Improvements**
- Feature Kimi K2 prominently in sidebar navigation
- Add dedicated "Featured Provider" sections
- Improved cross-linking between related pages
- Enhanced provider comparison structure

All pages now optimized for search engines and social media sharing
with consistent branding emphasizing CCProxy + Claude Code integration.

--- a/docs/package.json
+++ b/docs/package.json
@@ -10,5 +10,10 @@
   "devDependencies": {
     "vitepress": "^1.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@algolia/client-search": "^5.33.0",
+    "local-search": "^1.1.2",
+    "vitepress-plugin-search": "^1.0.4-alpha.22"
+  }
 }
