feat(blog): add blog infrastructure and navigation
- Configure VitePress blog routing and sidebar
- Add blog navigation to main nav
- Set up blog post organization and structure
- Add social sharing OG image configuration

--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "preview": "vitepress preview"
+    "preview": "vitepress preview",
+    "deploy": "../scripts/deploy-cloudflare.sh --production",
+    "deploy:preview": "../scripts/deploy-cloudflare.sh --preview",
+    "deploy:local": "../scripts/deploy-local.sh"
   },
   "devDependencies": {
     "vitepress": "^1.0.0"
