fix(ci): resolve remaining pipeline failures
- Fix govet configuration: remove unsupported 'shadow' property
- Update security scan: replace broken action with direct gosec install
- Update Dockerfile: use Go 1.24 to match CI environment
- Ensure consistent Go version across all build environments
- Maintain security scanning with direct tool installation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -181,10 +181,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Install gosec
+        run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+
       - name: Run Gosec Security Scanner
-        uses: securecodewarrior/github-action-gosec@v1
-        with:
-          args: './...'
+        run: gosec ./...
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
