fix(lint): resolve golangci-lint errors and configuration issues
- Add depguard configuration to allow internal ccproxy imports
- Fix misspelling: 'cancelled' → 'canceled' in setup command
- Optimize struct field alignment to reduce memory usage
- Apply gofumpt formatting to proxy main.go
- Ensure all imports follow proper ordering conventions

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,14 @@ linters-settings:
       - standard
       - default
       - prefix(ccproxy)
+  
+  depguard:
+    rules:
+      main:
+        allow:
+          - $gostd
+          - ccproxy
+          - github.com/gin-gonic/gin
 
   revive:
     rules:
