fix(ci): resolve all CI/CD pipeline failures
- Fix golangci-lint configuration:
  - Replace deprecated 'format' with 'formats' array
  - Update depguard configuration to new format
  - Replace deprecated linters (exportloopref → copyloopvar, gomnd → mnd)
  - Add proper allow rules for depguard

- Fix security scan:
  - Replace non-existent gosec GitHub action with direct go install
  - Use go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest

- Fix lint errors in cmd/setup/main.go:
  - Add error checking for all fmt.Fprintf calls
  - Add proper error handling for file.Close() in defer
  - Fix misspelling: 'cancelled' → 'canceled'

- Ensure all tests pass locally before push

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,6 +58,10 @@ linters-settings:
           - $gostd
           - ccproxy
           - github.com/gin-gonic/gin
+          - github.com/spf13/viper
+          - github.com/sirupsen/logrus
+          - github.com/stretchr/testify
+          - github.com/google/generative-ai-go
 
   revive:
     rules:
@@ -74,7 +78,7 @@ linters:
     - dogsled
     - dupl
     - errcheck
-    - exportloopref
+    - copyloopvar
     - exhaustive
     - gci
     - gochecknoinits
@@ -87,7 +91,7 @@ linters:
     - gofumpt
     - goheader
     - goimports
-    - gomnd
+    - mnd
     - gomodguard
     - goprintffuncname
     - gosec
@@ -114,7 +118,7 @@ issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - gomnd
+        - mnd
         - lll
         - dupl
         - gosec
