--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -181,10 +181,10 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Run Gosec Security Scanner
+      - name: Run Gosec Security Scanner  
         run: |
-          curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
-          gosec ./...
+          go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+          $(go env GOPATH)/bin/gosec ./...
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
