--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: npm
           cache-dependency-path: docs/package-lock.json
 
@@ -39,7 +39,11 @@ jobs:
         working-directory: docs
 
       - name: Build documentation
-        run: npm run build
+        run: |
+          echo "Starting VitePress build..."
+          npm run build
+          echo "Build completed, checking output..."
+          ls -la .vitepress/dist/
         working-directory: docs
 
       - name: Upload artifact
