fix(docs): ensure clean builds by removing dist folder
- Added npm run clean script to remove .vitepress/dist folder
- Updated build and docs:build scripts to run clean before vitepress build
- Ensures fresh build every time, preventing stale file issues
- Enhanced CI workflow with better build verification and file counting
- This resolves potential CI caching issues and ensures consistent builds

Breaking: Build commands now automatically clean dist folder
- npm run build: now runs clean && vitepress build
- npm run docs:build: now runs clean && vitepress build
- Added standalone npm run clean command for manual use

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,10 +40,13 @@ jobs:
 
       - name: Build documentation
         run: |
-          echo "Starting VitePress build..."
+          echo "Starting clean build process..."
           npm run build
-          echo "Build completed, checking output..."
-          ls -la .vitepress/dist/
+          echo "Build completed successfully!"
+          echo "Checking output directory:"
+          ls -la .vitepress/dist/ | head -10
+          echo "Total files in dist:"
+          find .vitepress/dist -type f | wc -l
         working-directory: docs
 
       - name: Upload artifact
