fix(lint): address remaining golangci-lint issues
- Fix unchecked error returns for HTTP requests and response handling
- Add proper error handling for json.Marshal and http.NewRequest
- Fix goroutine test issues by removing t.Fatalf calls
- Update http.NewRequest to use http.NewRequestWithContext
- Fix elseif style issues
- Add context import where needed
- Handle response body close errors
- Remove unused goroutine parameters

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,6 +39,8 @@ jobs:
         working-directory: docs
 
       - name: Build documentation
+        env:
+          GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
         run: |
           echo "Starting clean build process..."
           npm run build
