feat(docs): add Mermaid diagram support to VitePress
- Install vitepress-plugin-mermaid and dependencies
- Configure Mermaid plugin with theme-aware settings
- Register Mermaid component in VitePress theme
- Add architecture diagrams to API documentation
- Enable flowcharts, sequence diagrams, and class diagrams
- Set up automatic dark/light theme switching for diagrams

This enables rich diagram support in documentation for better
visualization of system architecture and API flows.

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,9 @@
     "deploy:local": "../scripts/deploy-local.sh"
   },
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "mermaid": "^11.9.0",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "overrides": {
     "esbuild": ">=0.24.3"
