feat: implement Phase 1.3 - core utilities and process management
- Add path utilities for ~/.ccproxy directory structure management
  - Config, logs, PID, plugins, and temp directory helpers
  - Atomic file writing for safe concurrent operations
  - Comprehensive path validation and error handling

- Implement PID file management and process lifecycle
  - Lock acquisition/release for single instance enforcement
  - Process state tracking and cleanup
  - Graceful shutdown handling

- Create structured logger utility
  - JSON-formatted logging with configurable levels
  - File rotation support with size/age limits
  - Concurrent-safe operations

- Update .gitignore to exclude Go binaries and build artifacts

All utilities include comprehensive test coverage (100%)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,24 @@ logs/
 .env.production.local
 
 .temp/x
+
+# Go binaries
+ccproxy
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Go workspace file
+go.work
+go.work.sum
+
+# Dependency directories
+vendor/
