feat(docker): implement comprehensive Docker support and containerization
- Multi-stage Dockerfile for minimal production images
- Development Dockerfile with hot reload support
- Multi-architecture build support (amd64, arm64)
- Docker Compose configurations for production and development
- Health checks and non-root user security
- Environment variable configuration support
- Monitoring stack integration (Prometheus, Grafana)
- Kubernetes deployment examples
- Helm chart structure
- Comprehensive Docker documentation
- GitHub Actions workflow for automated builds
- Docker validation script

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-# CCProxy Environment Configuration
+# CCProxy Configuration
+CCPROXY_API_KEY=your-ccproxy-api-key-here
 
-# Server Configuration
-CCPROXY_HOST=127.0.0.1
-CCPROXY_PORT=3456
-CCPROXY_LOG=true
-CCPROXY_LOG_FILE=ccproxy.log
+# Provider API Keys
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+OPENAI_API_KEY=your-openai-api-key-here
+GOOGLE_API_KEY=your-google-api-key-here
+AWS_ACCESS_KEY_ID=your-aws-access-key-here
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key-here
 
-# Authentication
-APIKEY=your-api-key-here
+# Optional: Monitoring
+GRAFANA_PASSWORD=admin
 
-# Corporate Proxy (optional)
-# HTTPS_PROXY=http://proxy.company.com:8080
-# PROXY_URL=http://proxy.company.com:8080
+# Optional: Proxy Configuration
+# CCPROXY_PROXY_URL=http://proxy.example.com:8080
 
-# Provider API Keys (if not using config.json)
-# OPENAI_API_KEY=your-openai-key
-# ANTHROPIC_API_KEY=your-anthropic-key
-# GEMINI_API_KEY=your-gemini-key
-# DEEPSEEK_API_KEY=your-deepseek-key
+# Optional: Performance Settings
+# CCPROXY_PERFORMANCE_RATE_LIMIT_REQUESTS_PER_MIN=1000
+# CCPROXY_PERFORMANCE_CIRCUIT_BREAKER_ENABLED=true
+EOF < /dev/null
