--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,251 +3,121 @@ name: Build and Test
 on:
   push:
     branches: [ main, develop ]
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - '.gitignore'
   pull_request:
-    branches: [ main, develop ]
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - '.gitignore'
+    branches: [ main ]
+  workflow_dispatch:
 
 env:
-  GO_VERSION: '1.24.2'
+  GO_VERSION: '1.24'
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: latest
-          args: --fix --timeout=5m
-
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ env.GO_VERSION }}
 
-      - name: Get dependencies
-        run: go mod download
+    - name: Cache Go modules
+      uses: actions/cache@v4
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
-      - name: Verify dependencies
-        run: go mod verify
+    - name: Download dependencies
+      run: make deps
 
-      - name: Run tests
-        run: go test -v -race -coverprofile=coverage.out ./...
+    - name: Run tests
+      run: make test
 
-      - name: Generate coverage report
-        run: go tool cover -html=coverage.out -o coverage.html
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage/coverage.out
+        flags: unittests
+        name: codecov-umbrella
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.out
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.html
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ env.GO_VERSION }}
+
+    - name: Install golangci-lint
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+
+    - name: Run linters
+      run: make lint
 
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [test, lint]
     strategy:
       matrix:
         goos: [linux, darwin, windows]
         goarch: [amd64, arm64]
         exclude:
-          # Windows ARM64 builds might have issues, exclude for now
           - goos: windows
             goarch: arm64
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ env.GO_VERSION }}
 
-      - name: Get dependencies
-        run: go mod download
+    - name: Build
+      run: |
+        GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} make build
+        
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ccproxy-${{ matrix.goos }}-${{ matrix.goarch }}
+        path: build/ccproxy*
 
-      - name: Set binary name
-        id: binary_name
-        run: |
-          BINARY_NAME="ccproxy-${{ matrix.goos }}-${{ matrix.goarch }}"
-          if [ "${{ matrix.goos }}" = "windows" ]; then
-            BINARY_NAME="${BINARY_NAME}.exe"
-          fi
-          echo "name=${BINARY_NAME}" >> $GITHUB_OUTPUT
-
-      - name: Build binary
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-          CGO_ENABLED: 0
-        run: |
-          go build -a -installsuffix cgo -ldflags="-w -s -X main.version=dev-$(git rev-parse --short HEAD)" -o ${{ steps.binary_name.outputs.name }} ./cmd/proxy
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ steps.binary_name.outputs.name }}
-          path: ${{ steps.binary_name.outputs.name }}
-          retention-days: 7
-
-  integration-test:
-    name: Integration Tests
+  docker:
+    name: Docker Build
     runs-on: ubuntu-latest
-    needs: [test, build]
-    services:
-      # Add any required services for integration tests
-      redis:
-        image: redis:7-alpine
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    needs: [test, lint]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Get dependencies
-        run: go mod download
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: ccproxy-linux-amd64
-
-      - name: Make binary executable
-        run: chmod +x ccproxy-linux-amd64
-
-      - name: Run integration tests
-        run: |
-          # Start the proxy server in background
-          PROVIDER=groq GROQ_API_KEY=test-key ./ccproxy-linux-amd64 &
-          PROXY_PID=$!
-          
-          # Wait for server to start
-          sleep 5
-          
-          # Run integration tests
-          go test -v ./integration_test.go
-          
-          # Clean up (ignore error if process already terminated)
-          kill $PROXY_PID 2>/dev/null || true
-
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Run Gosec Security Scanner  
-        run: |
-          go install github.com/securego/gosec/v2/cmd/gosec@latest
-          $(go env GOPATH)/bin/gosec ./...
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-  docker-build:
-    name: Docker Build Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./docker/Dockerfile
-          push: false
-          load: true
-          tags: ccproxy:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Test Docker image
-        run: |
-          # Test that the image can start
-          docker run --rm -d --name ccproxy-test -p 7187:7187 -e PROVIDER=groq -e GROQ_API_KEY=test-key ccproxy:test
-          sleep 10
-          
-          # Basic health check
-          curl -f http://localhost:7187/health || exit 1
-          
-          # Clean up
-          docker stop ccproxy-test
-
-  validate:
-    name: Validate
-    runs-on: ubuntu-latest
-    needs: [lint, test, build, integration-test, security, docker-build]
-    if: always()
-    steps:
-      - name: Check all jobs
-        run: |
-          if [ "${{ needs.lint.result }}" != "success" ] || \
-             [ "${{ needs.test.result }}" != "success" ] || \
-             [ "${{ needs.build.result }}" != "success" ] || \
-             [ "${{ needs.integration-test.result }}" != "success" ] || \
-             [ "${{ needs.security.result }}" != "success" ] || \
-             [ "${{ needs.docker-build.result }}" != "success" ]; then
-            echo "One or more required jobs failed"
-            exit 1
-          fi
-          echo "All checks passed successfully!"
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
