feat(versioning): implement comprehensive version management system
- Add semantic versioning with conventional commits support
- Create version management script with full automation
- Implement auto-release workflow triggered on main merge
- Add version bump commands to Makefile
- Include comprehensive documentation for versioning system
- Support automatic release notes and changelog generation
- Add conventional commit message template
- Integrate version management with build system

This enables:
- Automatic releases on merge to main
- Conventional commit validation
- Semantic version bumping
- Generated changelogs and release notes
- Cross-platform binary distribution
- Docker image publishing
- Homebrew formula updates

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,15 @@
-name: Release
+name: Manual Release
 
 on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Git tag to release'
+        required: true
+        type: string
 
 env:
   GO_VERSION: '1.24'
