--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,15 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
 
+    - name: Clean and prepare Go environment
+      run: |
+        go clean -cache -modcache -testcache
+        go mod download
+        go mod verify
+
+    - name: Verify build before linting
+      run: go build ./cmd/ccproxy
+
     - name: Install golangci-lint
       run: |
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.61.0
@@ -42,6 +51,12 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
+
+    - name: Clean and prepare Go environment
+      run: |
+        go clean -cache -modcache -testcache
+        go mod download
+        go mod verify
 
     - name: Run unit tests
       run: go test -v -timeout 2m ./internal/...
